--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,10 +58,14 @@ jobs:
           print(f"::set-output name=publishing::{publishing}")
 
       - name: Set up QEMU (for docker buildx)
-        uses: docker/setup-qemu-action@v1
+        # NOTE: Updates to the actions commit hash should go hand in hand with
+        #       updates in the test-docker-build workflow.
+        uses: docker/setup-qemu-action@25f0500ff22e406f7191a2a8ba8cda16901ca018 # associated tag: v1.0.2
 
       - name: Set up Docker Buildx (for chartpress multi-arch builds)
-        uses: docker/setup-buildx-action@v1
+        # NOTE: Updates to the actions commit hash should go hand in hand with
+        #       updates in the test-docker-build workflow.
+        uses: docker/setup-buildx-action@2a4b53665e15ce7d7049afb11ff1f70ff1610609 # associated tag: v1.1.2
 
       - name: Install chart publishing dependencies (chartpress, helm)
         run: |
