ci: let test-docker-build workflow trigger on chartpress.yaml changes

--- a/.github/workflows/test-docker-build.yaml
+++ b/.github/workflows/test-docker-build.yaml
@@ -10,11 +10,13 @@ on:
   pull_request:
     paths:
       - "images/**"
-      - "**/test-docker-build.yaml"
+      - "chartpress.yaml"
+      - ".github/workflows/test-docker-build.yaml"
   push:
     paths:
       - "images/**"
-      - "**/test-docker-build.yaml"
+      - "chartpress.yaml"
+      - ".github/workflows/test-docker-build.yaml"
     branches-ignore:
       - "dependabot/**"
   workflow_dispatch:
