--- a/images/secret-sync/Dockerfile
+++ b/images/secret-sync/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8-alpine
 # VULN_SCAN_TIME=2021-04-16_00:02:04
 
 # Note that we use tini-static, it embeds dependencies missing in alpine
-RUN ARCH=`uname -m`; date; \
+RUN ARCH=`uname -m`; \
     if [ "$ARCH" = x86_64 ]; then ARCH=amd64; fi; \
     if [ "$ARCH" = aarch64 ]; then ARCH=arm64; fi; \
     wget -qO /tini "https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-$ARCH" \
