schema: catch typos in values using additionalProperties
Our schema.yaml file is rendered into values.schema.json and shipped
with the Helm chart. It is a JSONSchema that covers all the
configuration options or allows arbitrary configuration where it doesn't
explicitly cover it.

With this enabled we will catch almost all typos in values passed to the
Helm chart, but on the other hand we will also cause some disruptions
during `helm upgrade` commands before any changes has been made where we
previously ignored configuration that wasn't recognized.

--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -196,7 +196,9 @@ spec:
                   #       lookup function on the user managed k8s Secret.
                   name: {{ include "jupyterhub.hub.fullname" . }}
                   key: hub.config.ConfigurableHTTPProxy.auth_token
-            {{- include "jupyterhub.extraEnv" .Values.hub.extraEnv | nindent 12 }}
+            {{- with .Values.hub.extraEnv }}
+            {{- include "jupyterhub.extraEnv" . | nindent 12 }}
+            {{- end }}
           ports:
             - name: http
               containerPort: 8081
