--- a/jupyterhub/templates/image-pull-secret.yaml
+++ b/jupyterhub/templates/image-pull-secret.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.imagePullSecret.create .Values.imagePullSecret.enabled }}
+{{- if .Values.imagePullSecret.create }}
 kind: Secret
 apiVersion: v1
 metadata:
