ci: simplify lint-and-validate-config.yaml values

--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -8,14 +8,12 @@ imagePullSecret:
 imagePullSecrets: [a, b]
 
 hub:
-  cookieSecret: bbbb2222
   config:
     # We pin these to avoid generating changes which cause diffs
-    # FIXME: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/issues/2108
     ConfigurableHTTPProxy:
-      auth_token: aaaa1111 # currently ignored, proxy.secretToken is used
+      auth_token: aaaa1111
     JupyterHub:
-      cookie_secret: bbbb2222 # currently ignored, hub.cookieSecret is used
+      cookie_secret: bbbb2222
     CryptKeeper:
       keys: [cccc3333]
   extraFiles:
@@ -155,7 +153,6 @@ rbac:
   enabled: true
 
 proxy:
-  secretToken: aaaa1111 # see hub.config section for a FIXME
   service:
     extraPorts:
       - name: ssh
