--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,7 +67,10 @@ jobs:
         run: |
           . ./ci/common
           setup_helm
+          helm version
+
           pip install chartpress pyyaml
+          pip list
 
       - name: Setup push rights to jupyterhub/helm-chart
         # This was setup by...
