maint: remove deprecated support for hub.extraConfigMap

--- a/jupyterhub/templates/hub/secret.yaml
+++ b/jupyterhub/templates/hub/secret.yaml
@@ -7,9 +7,7 @@ metadata:
 type: Opaque
 data:
   {{- $values := merge dict .Values }}
-  {{- /* preserve behavior of deprecated hub.extraConfigMap */}}
-  {{- $_ := set $values "custom" (merge dict $values.custom .Values.hub.extraConfigMap) }}
-  {{- /* passthrough subset of Chart / Release */}}
+  {{- /* also passthrough subset of Chart / Release */}}
   {{- $_ := set $values "Chart" (dict "Name" .Chart.Name "Version" .Chart.Version) }}
   {{- $_ := set $values "Release" (pick .Release "Name" "Namespace" "Service") }}
   values.yaml: {{ $values | toYaml | b64enc | quote }}
