--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -1,12 +1,11 @@
-FROM jupyter/base-notebook:016833b15ceb
+FROM jupyter/base-notebook:cf9a75c29789
 # Built from... https://hub.docker.com/r/jupyter/base-notebook/
 #               https://github.com/jupyter/docker-stacks/blob/master/base-notebook/Dockerfile
-# Built from... Ubuntu 18.04
+# Built from... Ubuntu 20.04
 
 # VULN_SCAN_TIME=2021-04-13_00:03:33
 
-# The jupyter/docker-stacks images contains jupyterhub, jupyterlab and the
-# jupyterlab-hub extension already.
+# The jupyter/docker-stacks images contains jupyterhub and jupyterlab already.
 
 # Example install of git and nbgitpuller.
 # NOTE: git is already available in the jupyter/minimal-notebook image.
