--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -88,6 +88,7 @@ hub:
     runAsUser: 1000
     runAsGroup: 1000
     allowPrivilegeEscalation: false
+  lifecycle: {}
   services: {}
   pdb:
     enabled: false
