--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,15 +39,10 @@ repos:
       - id: prettier
 
   # Reset Chart.yaml version and values.yaml image tags
-  - repo: local
+  - repo: https://github.com/jupyterhub/chartpress
+    rev: 1.2.0
     hooks:
       - id: chartpress
-        name: chartpress --reset
-        files: jupyterhub/Chart.yaml|jupyterhub/values.yaml
-        description: Run `chartpress --reset` to clean up helm charts before committing.
-        entry: chartpress --reset
-        language: system
-        pass_filenames: false
 
   # Check chart for possible issues
   - repo: https://github.com/gruntwork-io/pre-commit
