--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ jobs:
   test-arm:
     machine:
       image: ubuntu-2004:202101-01
-    # TODO: resource_class is ignored and falls back to the standard x86_64 medium
-    # Need to apply to use arm
     resource_class: arm.medium
     steps:
       - checkout
@@ -42,9 +40,14 @@ jobs:
             pip3 install --no-cache-dir -r dev-requirements.txt
           name: Install dependencies
 
+      # TODO: test 'docker build' instead of buildx
+      # Ideally we'd use standard docker build since we're building for the native
+      # platform. Unfortunately the singleuser image can't be built on arm64, and the
+      # easiest way to skip this image is to use chartpress's --platform option,
+      # which is only supported with docker-buildx engine
       - run:
           command: |
-            chartpress
+            chartpress --builder docker-buildx --platform linux/arm64
           name: Run chartpress
 
       - run:
