--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -457,6 +457,8 @@ ingress:
   hosts:
     - mocked1.domain.name
     - mocked2.domain.name
+  pathSuffix: dummy-pathSuffix
+  pathType: ImplementationSpecific
   tls:
     - secretName: jupyterhub-tls
       hosts:
