--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -230,3 +230,6 @@ spec:
               path: {{ .Values.hub.baseUrl | trimSuffix "/" }}/hub/health
               port: http
           {{- end }}
+      {{- if .Values.hub.extraPodSpec }}
+      {{ toYaml .Values.hub.extraPodSpec | nindent 6 }}
+      {{- end }}
