--- a/jupyterhub/templates/proxy/autohttps/deployment.yaml
+++ b/jupyterhub/templates/proxy/autohttps/deployment.yaml
@@ -135,4 +135,7 @@ spec:
           securityContext:
             {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
           {{- end }}
+      {{- if .Values.proxy.traefik.extraPodSpec }}
+      {{ toYaml .Values.proxy.traefik.extraPodSpec | nindent 6 }}
+      {{- end }}
 {{- end }}
