--- a/jupyterhub/templates/scheduling/user-scheduler/deployment.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/deployment.yaml
@@ -79,4 +79,7 @@ spec:
           securityContext:
             {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
           {{- end }}
+      {{- if .Values.scheduling.userScheduler.extraPodSpec }}
+      {{ toYaml .Values.scheduling.userScheduler.extraPodSpec | nindent 6 }}
+      {{- end }}
 {{- end }}
