--- a/jupyterhub/templates/proxy/deployment.yaml
+++ b/jupyterhub/templates/proxy/deployment.yaml
@@ -163,6 +163,6 @@ spec:
           securityContext:
             {{- . | toYaml | trimSuffix "\n" | nindent 12 }}
           {{- end }}
-      {{- if .Values.proxy.chp.extraPodSpec }}
-      {{ toYaml .Values.proxy.chp.extraPodSpec | nindent 6 }}
+      {{- with .Values.proxy.chp.extraPodSpec }}
+      {{- . | toYaml | trimSuffix "\n" | nindent 6 }}
       {{- end }}
