--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -114,6 +114,11 @@ hub:
       value: MOCK_ENV_VAR_VALUE1
     MOCK_ENV_VAR_NAME2:
       value: MOCK_ENV_VAR_VALUE2
+    MOCK_ENV_VAR_NAME3:
+      valueFrom:
+        secretKeyRef:
+          name: my-k8s-secret
+          key: my-k8s-secret-key
   extraContainers: []
   extraVolumes: []
   extraVolumeMounts: []
