--- a/.github/workflows/vuln-scan.yaml
+++ b/.github/workflows/vuln-scan.yaml
@@ -42,14 +42,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          # chartpress requires the full history
+          # chartpress requires git history to set chart version and image tags
+          # correctly
           fetch-depth: 0
-      - name: Create ./tmp dir
-        run: |
-          mkdir ./tmp
+
       - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+
       - name: Install chartpress
         run: |
           # FIXME: six is required by docker 5.0.0 but isn't explicitly required
@@ -72,6 +72,9 @@ jobs:
           echo "::set-output name=spec::$IMAGE_SPEC"
           echo "::set-output name=name::$(echo $IMAGE_SPEC | sed 's/\(.*\):.*/\1/')"
           echo "::set-output name=tag::$(echo $IMAGE_SPEC | sed 's/.*:\(.*\)/\1/')"
+
+      - name: Create ./tmp dir
+        run: mkdir ./tmp
 
       # Action reference: https://github.com/aquasecurity/trivy-action
       - name: Scan latest published image
