ci: don't run twice for pre-commit PRs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ on:
       - "!.github/workflows/publish.yaml"
     branches-ignore:
       - "dependabot/**"
+      - "pre-commit-ci-update-config"
     tags:
       - "**"
 
