--- a/.github/workflows/test-docs.yaml
+++ b/.github/workflows/test-docs.yaml
@@ -18,6 +18,7 @@ on:
       - "**/test-docs.yaml"
     branches-ignore:
       - "dependabot/**"
+      - "pre-commit-ci-update-config"
   workflow_dispatch:
 
 jobs:
