--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -21,6 +21,7 @@ on:
       - "!.github/workflows/test-chart.yaml"
     branches-ignore:
       - "dependabot/**"
+      - "pre-commit-ci-update-config"
   workflow_dispatch:
 
 jobs:
