fix ingressClassName for kubernetes version is >= 1.18
Signed-off-by: chenshapira <cs030391@gmail.com>

--- a/jupyterhub/templates/ingress.yaml
+++ b/jupyterhub/templates/ingress.yaml
@@ -14,8 +14,8 @@ metadata:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.ingressClassName }}
-  ingressClassName: "{{ . }}"
+  {{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
   {{- end }}
   rules:
     {{- range $host := .Values.ingress.hosts | default (list "") }}
