Add extra init containers to chart

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -248,6 +248,7 @@ proxy:
       maxAge: 15724800 # About 6 months
     resources: {}
     labels: {}
+    extraInitContainers: []
     extraEnv: {}
     extraVolumes: []
     extraVolumeMounts: []
